# strawberry-graphql-mage

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  LICENCE  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/: labels.yml  release-drafter.yml  stale.yml
.github/workflows/: constraints.txt  release.yml  tests.yml
maga_core/: models.py  schema.py  strawberry_types.py  types.py
strawberry_graphql_autoapi/backends/sqlalchemy/: backend.py  models.py  operations.py
strawberry_graphql_autoapi/backends/sqlalchemy/tests/example_app/: app.py  schema.py
strawberry_graphql_autoapi/core/: __init__.py  backend.py  models.py  resolver.py  schema.py  strawberry_types.py  type_creator.py  types.py  types_generated.py  utils.py
strawberry_graphql_mage/backends/api/: backend.py
strawberry_graphql_mage/backends/json/: backend.py  converter.py
strawberry_graphql_mage/backends/python/: backend.py  models.py
strawberry_graphql_mage/backends/sqlalchemy/: backend.py  models.py  operations.py
strawberry_graphql_mage/core/: backend.py  models.py  resolver.py  schema.py  strawberry_types.py  type_creator.py  types.py  types_generated.py
strawberry_mage/: __init__.py
strawberry_mage/backends/: __init__.py
strawberry_mage/backends/api/: __init__.py  backend.py
strawberry_mage/backends/api/tests/: api.py  conftest.py  test_simple_operations.py
strawberry_mage/backends/api/tests/example_app/: .graphqlconfig  app.py  custom_backend.py  schema.graphql  schema.py
strawberry_mage/backends/api/tests/example_app/graphql_operations/: operations.graphql
strawberry_mage/backends/dataloader/: __init__.py
strawberry_mage/backends/json/: __init__.py  backend.py  models.py
strawberry_mage/backends/json/tests/: conftest.py  test_simple_operations.py
strawberry_mage/backends/json/tests/example_app/: app.py  schema.graphql
strawberry_mage/backends/python/: __init__.py  backend.py  converter.py  models.py
strawberry_mage/backends/python/tests/: conftest.py  test_simple_operations.py
strawberry_mage/backends/python/tests/example_app/: app.py  schema.graphql  schema.py
strawberry_mage/backends/python/tests/example_app/graphql_operations/: operations.graphql
strawberry_mage/backends/sqlalchemy/: __init__.py  backend.py  models.py  operations.py  types.py  utils.py
strawberry_mage/backends/sqlalchemy/tests/: conftest.py  test_nested_queries.py  test_simple_operations.py
strawberry_mage/backends/sqlalchemy/tests/example_app/: .graphqlconfig  app.py  schema.graphql  schema.py
strawberry_mage/backends/sqlalchemy/tests/example_app/graphql_operations/: operations.graphql
strawberry_mage/core/: __init__.py  backend.py  models.py  resolver.py  schema.py  strawberry_types.py  type_creator.py  types.py  types_generated.py  utils.py
strawberry_mage/core/resolvers/: __init__.py  base.py  resolvers.py
strawberry_mage/core/tests/example_app/: app.py
tests/api/: .graphqlconfig  conftest.py  test_simple_operations.py
tests/api/example_app/: api.py  app.py  custom_backend.py  schema.graphql  schema.py
tests/api/graphql_operations/: operations.graphql
tests/core/example_app/: app.py  schema.py
tests/example_app/: app.py  schema.py
tests/json/: .graphqlconfig  conftest.py  test_simple_operations.py
tests/json/example_app/: .graphqlconfig  app.py  schema.graphql  schema.py
tests/json/graphql_operations/: operations.graphql
tests/python/: .graphqlconfig  conftest.py  test_simple_operations.py
tests/python/example_app/: app.py  schema.graphql  schema.py
tests/python/graphql_operations/: operations.graphql
tests/sqlalchemy/: .graphqlconfig  conftest.py  test_nested_queries.py  test_simple_operations.py
tests/sqlalchemy/example_app/: app.py  schema.graphql  schema.py
tests/sqlalchemy/example_app/graphql_operations/: operations.graphql
tests/sqlalchemy/graphql_operations/: operations.graphql
