[tool.poetry]
name = "strawberry-graphql-mage"
version = "0.0.1-alpha.8"
description = "An automated, modular, backend-agnostic GraphQL API generator"
license = "MIT"
authors = ["Vojtěch Dohnal <vojdoh@gmail.com>"]
maintainers = []
readme = "README.md"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
packages = [
    { include = "strawberry_mage" }
]

[tool.poetry.dependencies]
python = "^3.8"
strawberry-graphql = ">0.80.0,<1.0.0"
inflection = "^0.5.1"
SQLAlchemy = { extras = ["asyncio"], version = "^1.4.25" }
aiosqlite = "^0.17.0"
frozendict = "^2.0.6"
overrides = "^6.1.0"
SQLAlchemy-Utils = "^0.38.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.18.0"
yappi = "^1.3.3"
nox = "^2022.1.7"
pre-commit = "^2.15.0"
safety = "^1.10.3"
poetry = "^1.1.11"
pydocstyle = {extras = ["toml"], version = "^6.1.1"}
pylint = "^2.11.1"
toml = "^0.10.2"
uvicorn = { extras = ["standard"], version = "^0.18.1" }
starlette = "^0.20.3"
nox-poetry = "^1.0.0"
pyright = "^1.1.271"
gevent = "^21.12.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
asyncio_mode = 'strict'
filterwarnings = [
    "always"
]

[tool.poetry.urls]
"Homepage" = "https://github.com/KundaPanda/strawberry-graphql-mage/"


[tool.coverage.run]
concurrency = [
    "gevent",
    "thread"
]
source = [
    "strawberry_mage"
]
parallel = true

[tool.pyright]
include = ["strawberry_mage"]

[tool.black]
line-length = 120

[tool.pydocstyle]
convention = "pep257"
ignore_decorators = "overrides"

[tool.pylint.master]
ignore = [
    "tests",
]

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "too-few-public-methods",
    "too-many-return-statements",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
